[gd_scene load_steps=6 format=2]

[ext_resource path="res://gameplay/ship/ship.tscn" type="PackedScene" id=1]
[ext_resource path="res://gameplay/ship/enemy/bot_cv.gd" type="Script" id=2]
[ext_resource path="res://gameplay/ship/enemy/cv.svg" type="Texture2D" id=3]
[ext_resource path="res://gameplay/weapon/gun/gun.tscn" type="PackedScene" id=4]
[ext_resource path="res://gameplay/projectile/127mm_shell.tscn" type="PackedScene" id=6]

[node name="Carrier" instance=ExtResource( 1 )]
script = ExtResource( 2 )
base_hp = 3000
weapon_groups = {
"main": {
"base_accuracy": 0.0,
"base_dispersion": 0.4,
"base_reload": 3.0,
"node_paths": [ NodePath("SmallGun"), NodePath("SmallGun2"), NodePath("SmallGun3"), NodePath("SmallGun4") ]
}
}
fighter_takeoff_duration = 5.0
fighter_y_min = 420.0
fighter_y_max = 460.0
bomber_takeoff_duration = 6.0
bomber_y_min = 460.0
bomber_y_max = 210.0

[node name="CollisionPolygon2D" parent="." index="0"]
polygon = PackedVector2Array( -62, -7, 63, -7, 63, -3, 59, 0, -60, 0 )

[node name="Sprite2D" parent="." index="1"]
position = Vector2( 0, -7.5 )
texture = ExtResource( 3 )

[node name="FighterTakeoffTimer" type="Timer" parent="." index="2"]

[node name="BomberTakeoffTimer" type="Timer" parent="." index="3"]

[node name="SmallGun" parent="." index="4" instance=ExtResource( 4 )]
position = Vector2( -23, -8 )
projectile_scene = ExtResource( 6 )
base_muzzle_velocity = 240.0
_range = 587.755

[node name="SmallGun2" parent="." index="5" instance=ExtResource( 4 )]
position = Vector2( -19, -9 )
projectile_scene = ExtResource( 6 )
base_muzzle_velocity = 240.0
_range = 587.755

[node name="SmallGun3" parent="." index="6" instance=ExtResource( 4 )]
position = Vector2( 11, -9 )
projectile_scene = ExtResource( 6 )
base_muzzle_velocity = 240.0
_range = 587.755

[node name="SmallGun4" parent="." index="7" instance=ExtResource( 4 )]
position = Vector2( 15, -8 )
projectile_scene = ExtResource( 6 )
base_muzzle_velocity = 240.0
_range = 587.755

[connection signal="timeout" from="FighterTakeoffTimer" to="." method="_on_FighterTakeoffTimer_timeout"]
[connection signal="timeout" from="BomberTakeoffTimer" to="." method="_on_BomberTakeoffTimer_timeout"]
